--- a/templates/base.html
+++ b/templates/base.html
@@ -16,7 +16,7 @@
                 </div>
                 <div class="chatbox__content--header">
                     <h4 class="chatbox__heading--header">Chat support</h4>
-                    <p class="chatbox__description--header">Hi. My name is Sam. How can I help you?</p>
+                    <p class="chatbox__description--header">Hi there! My name is RoboCoppi. Do you want to cat with me?</p>
                 </div>
             </div>
             <div class="chatbox__messages">
@@ -32,8 +32,8 @@
         </div>
     </div>
 </div>
-
-    <script>
+#Error $SCRIPT_ROOT line solution: even though JavaScript is the default, it only works when I specify it
+    <script type = text/javascript>
         $SCRIPT_ROOT = {{ request.script_root|tojson }};
     </script>
     <script type="text/javascript" src="{{ url_for('static', filename='app.js') }}"></script>
