--- a/standalone-frontend/style.css
+++ b/standalone-frontend/style.css
@@ -8,15 +8,15 @@ body {
     font-family: 'Nunito', sans-serif;
     font-weight: 400;
     font-size: 100%;
-    background: #F1F1F1;
+    background: white;
 }
 
 *, html {
-    --primaryGradient: linear-gradient(93.12deg, #581B98 0.52%, #9C1DE7 100%);
-    --secondaryGradient: linear-gradient(268.91deg, #581B98 -2.14%, #9C1DE7 99.69%);
+    --primaryGradient: linear-gradient(93.12deg, #45d4e8 0.52%, #3eb0e9 100%);
+    --secondaryGradient: linear-gradient(268.91deg, #45d4e8 -2.14%, #3eb0e9 99.69%);
     --primaryBoxShadow: 0px 10px 15px rgba(0, 0, 0, 0.1);
     --secondaryBoxShadow: 0px -10px 15px rgba(0, 0, 0, 0.1);
-    --primary: #581B98;
+    --primary: #45d4e8;
 }
 
 /* CHATBOX
