--- a/templates/base.html
+++ b/templates/base.html
@@ -12,10 +12,8 @@
         <div class="chatbox__support">
             <div class="chatbox__header">
                 <div class="chatbox__image--header">
-                    <img src="https://img.icons8.com/color/48/000000/circled-user-female-skin-type-5--v1.png" alt="image">
                 </div>
                 <div class="chatbox__content--header">
-                    <h4 class="chatbox__heading--header">Chat support</h4>
                     <p class="chatbox__description--header">Hi there! My name is RoboCoppi. Do you want to cat with me?</p>
                 </div>
             </div>
@@ -32,7 +30,7 @@
         </div>
     </div>
 </div>
-#Error $SCRIPT_ROOT line solution: even though JavaScript is the default, it only works when I specify it
+//Error $SCRIPT_ROOT line solution: even though JavaScript is the default, it only works when I specify it
     <script type = text/javascript>
         $SCRIPT_ROOT = {{ request.script_root|tojson }};
     </script>
